Se crea componentes y actualizaciones

--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -1,14 +1,20 @@
-#iniciarsesion {
+/* #iniciarsesion {
     background-color: #ffffff;
     color: gray;
     border-radius: 3px;
     border-radius: 20px;
-}
+} */
+
 
 li {
     margin-left:10px;
     margin-right:10px;
     
+}
+
+#registro {
+    background-color: #FAFAFA;
+    border-radius: 20px;
 }
 
 #carouselExampleControls{
@@ -35,6 +41,12 @@ li {
     font-size: 26px;
 }
 
+h3{
+    color: #B81C09;
+    text-align: center;
+    font-size: 26px;
+}
+
 .card-text{
     font-size: 20px;
 }
@@ -43,3 +55,4 @@ li {
     align-content: center;
     background-color: #FAFAFA;
 }
+
