--- a/public/CSS/dashboard.css
+++ b/public/CSS/dashboard.css
@@ -4,7 +4,7 @@
     --grey: #efefef;
 }
 
-body {
+#body-dashboard {
     overflow: hidden;
     font-family: 'Muli', sans-serif;
     font-weight: 300;
