se agrega nuevas caracteristicas

--- a/public/CSS/dashboard.css
+++ b/public/CSS/dashboard.css
@@ -55,8 +55,14 @@ a:hover {
 }
 
 #TituloDash{
-    margin-top:5px;
-    margin-left: px;
+    margin-top: 5px;
+    /* margin-left: px; */
+}
+
+#GraficoDash{
+    margin-top: 5px;
+    margin-left: -14px;
+    width: 102.7%;
 }
 
 .btn-search {
