se crea y se acomoda los botones de CRUD

--- a/public/CSS/barraDataTable.css
+++ b/public/CSS/barraDataTable.css
@@ -22,9 +22,9 @@
   padding: 26px;
 }
 
-.btn-add{
+.btn-action{
   float: rigth;
   padding: 5px;
-  margin-left: 910px;
+  margin-left: 850px;
 
 }
